@@ -30,6 +30,6 @@ EBUILD gitlab-ce-9.3.11.ebuild 13706 SHA256 cbaf37ceb4aa22bca196023e3282f66f858d
 EBUILD gitlab-ce-9.4.0_rc6.ebuild 13515 SHA256 55d3f521d4b54ae3a8e1730e603cc3699a957bb037d7bb402984c27b68e3ba50 SHA512 b47acf7328fc7396bf4e33b5e5fd147e20a5b4d0ea115518ad3492cac3e8d65e861e3ab961e73779d0bee82a5c08ca04a355e4c547c4504d5881d81f182ba6e4 WHIRLPOOL 47547b6d7368a086aa474cad44a304936a06615406c9c72d899677c2742596a991d9b2e4cb4f7a65a1011db2966b7f21ff0901004e00e4f96cbae8b28018e3bb
 EBUILD gitlab-ce-9.4.6.ebuild 13533 SHA256 2cf84d7c1638e0083a34a18e259a4f03e3c56007cdcd0f1184e7cfa186eed47b SHA512 6f7346319677838db6e539622c1123781e9b65cad2bfc964801fc9235f6738a58e04bbd3a3b7fb088704e508b5304802bcd1f940ed535b683d78a7ffbc740701 WHIRLPOOL 829021ef040afef15b8c7d961e337817b040d13e7ab3672f8cadeabbf55e795dfa19d5ff90b2a010b5f9bf492f4491fd2dcb6c3dead4920290b1e30448270e70
 EBUILD gitlab-ce-9.5.4.ebuild 13533 SHA256 f39f64a0396a581772df098eb27f72a34b09608afb960688d8fce71a6f2722b2 SHA512 3e7023b79b891fc83b36e10fcb497bc0402a1a7c89952ed2ecfee83f4e204ebd01d9899166d4450cf17529f96728bb15057ae63a6419f00981a8d252b5e10391 WHIRLPOOL 424b62cfc439e1039d87d26d030a5e11ac78a60a1be59404354f2386a831afae1971f736777e56127e43c81c3597d08edd62ecac2dfbd01c1d0f6e747fe2c9e2
-EBUILD gitlab-ce-9999.ebuild 13475 SHA256 ae6496c7a3fd61c484fed4822631005348ab5d9c05df61ef927ae797753e83c6 SHA512 79f6b2457187f95a52cddcd67643c9b6d4ca72a4f4e52f34849786ff8ac9be32b771504f6cdd7dbaf5de5f77869db75812ff4ea3aeaf2abbdc874e755b627d99 WHIRLPOOL 2fbd6ea7b1013128416c511f2d4eb4f08e087046a8c3dfe60c5b3d5b7ac521d86ab33dba9a62e5bd10b4f5ef0e1d9d3a8cac43a189dca018c6ddb734806d8a76
-MISC ChangeLog 23786 SHA256 4773ab2d4c7807a5f6a94ece93a64a3a23d6c49c1b6e4570346fce4049b8ec89 SHA512 2e0cf1dbe4af95e77f0e19ca06668d5764dd936ded703d26e2ae3e3a9baba06452f41fedc25c60e7328d12251112423dbf8fce8dc30e2c4302c97b37c7f7859c WHIRLPOOL 4dd3620775f9b5d40fbdc2fba40ae15a9f37088909574be366fd65b5457609784a381f91762ebd51f0f596d7590b7ae3d6312ebf55af9d293aa6e7a277cc3d04
+EBUILD gitlab-ce-9999.ebuild 13475 SHA256 c6cd66ca400c0560780faf0e2aa1b1fc13a583408ccf55f39af840d240b3e2df SHA512 a92b5382f091c3ce6372c3205a6469e3dcb877a5dcebf2e367c012b29ea90e3b63e84d84c666bcc32d6a5f8ce35c40e6df1b7bf04d0f488413c06d9af2c5f466 WHIRLPOOL bc50cf6e5ad695c62ae69f5122cf2de860cd05b63d538bc390f0448395aa64140d01cf19ab7563cb7c7a3e1d76471297737700a37c7b31ac1333bff7c72192e2
+MISC ChangeLog 23932 SHA256 05399e8bd137a26b75257f92797926056bbfb03668f486c7d2556535284c7519 SHA512 e1c74d801ebd7fd6d4b924e63af08b9a3b3475e9d5a46848eac0d6ac4a7b7c0c729de774542dc5ba7579ac1ee860c6122d77b84249cf586c519cdce7292578b2 WHIRLPOOL 466d691b3185529e73b02f4179aa4da2b1adf47821695061c70add96d3b31fcde0cb5745879c3938d2b5457a4585f3f7b4f028f743ef525b8ff3cd9c6870cd89
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
